@@ -1,3 +1,8 @@
+2014-07-14  Doug Simons <doug.simons@testplant.com>
+
+	* Headers/NSMenu.h
+    * Source/NSMenu.m: Implemented removeAllItems method.
+
 2023-02-12 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSCollectionView.m: Implementation of methods
